--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "express-session": "^1.17.1"
   },
   "bugs": {
     "url": "https://github.com/afredknot/Table-Reservation/issues"
