working on the css for the login page

--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "express-session": "^1.17.1"
+    "sequelize": "^6.3.5"
   },
   "bugs": {
     "url": "https://github.com/afredknot/Table-Reservation/issues"
   },
-  "homepage": "https://github.com/afredknot/Table-Reservation#readme"
+  "homepage": "https://github.com/afredknot/Table-Reservation#readme",
+  "devDependencies": {
+    "@types/express-handlebars": "^6.0.0"
+  }
 }
