--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "handlebars": "^4.7.6",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
     "express-session": "^1.17.1",
-    "connect-session-sequelize": "^7.0.4"
+    "handlebars": "^4.7.6",
+    "interactjs": "^1.10.17",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "bugs": {
     "url": "https://github.com/afredknot/Table-Reservation/issues"
